--- a/src/Pages/DetailThread/detail.scss
+++ b/src/Pages/DetailThread/detail.scss
@@ -1,6 +1,20 @@
+$primary-color: #331D2C;
+$secondary-color: #EFE1D1;
+$third-color: #A78295;
+
 /* Detail.scss */
 .center-content {
-    height: 100vh;
+    height: 10px;
+    margin-bottom: 600px;
+.center-content .profile {
+  width: 10px;
+}
+
+    .profile {
+      border-radius: 8px;
+      margin-top: 0px;
+      color: $secondary-color;
+    }
   
     .col-lg-8 {
       max-width: 800px;
